Couldn't fix the image scaling issue on mobile, so removing image when screen width below 450px

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -146,6 +146,11 @@
   }
 }
 
+@media (max-width: 450px) {
+  .hero-section {
+    display: none;
+  }
+}
 
 @media (max-width: 991px) {
   .hero-section {
